<resources>
    <string name="app_name">FoodLog App</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_register">Click here for register</string>
    <string name="jump_login">Back to Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="blank_name">Please enter your name</string>
    <string name="blank_phone">Please enter your phone number</string>
    <string name="blank_email">Please enter your email address</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="Egg">Egg-Calories--> 155 </string>
    <string name="Chicken">Chicken-Calories--> 239</string>
    <string name="pic">Load/Capture Food</string>
    <string name="history">History</string>
    <string name="blank_password">Please enter a password</string>
    <string name="invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_load">LoadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
